Downgrade to Java 21